--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -26,7 +26,7 @@ body {
 
 .app {
     display: grid;
-    grid-template-rows: 60px [content-s] 0.5fr [content-e] 100px [footer-s] 0.1fr [footer-e];
+    grid-template-rows: [nav-s] 60px [nav-e content-s] 0.5fr [content-e] 100px [footer-s] 0.1fr [footer-e];
     grid-template-columns: [app-s] 1fr [app-e];
     justify-items: center;
 }
