--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -30,3 +30,5 @@ body {
 @import "./home.scss";
 @import "./navigation.scss";
 @import "./footer.scss";
+@import "./login.scss";
+@import "./button.scss";
