button component modified and new account component created

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -34,6 +34,7 @@ body {
 
 @import "./pages/login.scss";
 @import "./pages/account.scss";
+@import "./pages/new-account.scss";
 
 @import "./helpers/button.scss";
 @import "./helpers/image-link.scss";
